overflow fix v2

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -123,8 +123,6 @@ img {
 }
 #form-field {
 	max-width: 80%;
-	width: 80%;
-	overflow-x: hidden;
 }
 .pdf-links {
     list-style-position: outside;
@@ -246,6 +244,9 @@ img {
     box-shadow: 0 0 10px #bbd3fd;
     -webkit-box-shadow: 0 0 10px #bbd3fd;
     transition: all 0.6s ease-in-out;
+}
+#nachricht {
+	width: 350;
 }
 }
 
